# CalculatorApp

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/de/lennart_oymanns/calculator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ComplexNumber.cpp  Derivative.cpp  Equation.hpp  Error.h  Function.cpp  State.cpp  UserFunction.cpp  UserFunction.hpp  Variable.cpp  main.cpp  native-lib.cpp  tests.cpp
app/src/main/java/de/lennart_oymanns/calculator/: Complex.java  HistoryActivity.java  MainActivity.java  Result.java
app/src/main/res/layout/: activity_history.xml  activity_main.xml  inout.xml  numinput.xml  specialinput.xml
app/src/main/res/menu/: artrighyp.xml  atrig.xml  trig.xml  trighyp.xml
app/src/main/res/values/: numeric.xml  styles.xml
app/src/test/java/de/lennart_oymanns/calculator/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
